# Idealis

./: .clang-format  .gitmodules  CMakeLists.txt  DownloadDependencies.sh  LICENSE  README.md  TODO  downloadDependencies.sh  fixFormat.sh
App/: BackendAPIDraft.hpp  CMakeLists.txt  SemanticEngine.cpp  SemanticEngine.hpp  Session.cpp
Database/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.hpp
Database/TableConfigs/: IdeaDiscussions.json  IdeaExpansions.json  IdeaProblem.json  IdeaStrengths.json  IdeaTag.json  IdeaWeaknesses.json  Ideas.json  Problems.json  Tags.json  Users.json
Documents/: ESTIMATION.md  IDEA_SYNERGY_AND_SYNTHESIS.md  Workflow.md
app/: CMakeLists.txt
